<resources>
    <string name="app_name">溜哒兔</string>
    <string name="app_home">首页</string>
    <string name="app_classify">分类</string>
    <string name="app_code">取货</string>
    <string name="app_cart">购物车</string>
    <string name="app_mine">我的</string>
    <string name="error_input_phone">请输入正确的手机号码</string>
    <string name="error_input_pwd_fail_info_tips">请输入6-20位英文字母或数字</string>
    <string name="error_input_verification">请输入验证码</string>
    <string name="sure_to_do_sth">您确定要%s吗？</string>
    <string name="log_out">确定退出登录吗?</string>
    <string name="sure_receipt">确定收货?</string>
    <string name="sure_delete_order">确定删除?</string>
    <string name="error_input_verification_fail_info">验证码错误:验证码由6位数字组成</string>
    <string name="tip_rate_err">您手机上没有可以评价的应用市场哦,\n下次再好评吧</string>
    <string name="company_copyright">安徽外婆婆科技有限公司&#160;&#160;&#160;&#160;版权所有\nCopyright©2017&#8211;%d LiuDaTu.All Rights Reserved</string>
    <string name="version_format">溜哒兔:%s</string>
    <string name="delete_item">确定删除吗?</string>
    <string name="right_arrow">右箭头</string>
    <string name="back_arrow">返回箭头</string>
    <string name="search_icon">搜索图标</string>
    <string name="message_icon">消息图标</string>
    <string name="share_icon">分享图标</string>
    <string name="copy_icon">复制图标</string>
    <string name="logo_icon">APP图标</string>
    <string name="home_icon">首页图标</string>
    <string name="classify_icon">分类图标</string>
    <string name="code_icon">码图标</string>
    <string name="cart_icon">购物车图标</string>
    <string name="mine_icon">我的图标</string>
    <string name="start_icon">启动页图</string>
    <string name="successful_icon">退款成功图</string>
    <string name="refunding_icon">退款中图</string>
    <string name="failed_icon">退款失败图</string>
    <string name="dot_icon">进程点图</string>
    <string name="loading_icon">加载中图</string>
    <string name="loading">加载中</string>
    <string name="empty_icon">空图</string>
    <string name="mine_wait_pay">待付款</string>
    <string name="main_wait_goods">待取货</string>
    <string name="main_wait_send">待收货</string>
    <string name="mine_completed">已完成</string>
    <string name="mine_evaluate">我的评价</string>
    <string name="mine_wait_evaluate">待评价</string>
    <string name="have_been_evaluated">已评价</string>
    <string name="mine_refund">退款售后</string>
    <string name="mine_life">美味生活</string>
    <string name="mine_red_packages">红包来了</string>
    <string name="mine_collection">我的收藏</string>
    <string name="mine_share">分享领红包</string>
    <string name="mine_customer_service">联系客服</string>
    <string name="mine_setting">设置</string>
    <string name="collection_icon">收藏图标</string>
    <string name="delete_icon">删除图标</string>
    <string name="phone_icon">手机图标</string>
    <string name="sub_icon">减图标</string>
    <string name="add_icon">加图标</string>
    <string name="cancel_icon">取消图标</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="mine_address">地址管理</string>
    <string name="add_address">添加</string>
    <string name="money_dec">零钱明细</string>
    <string name="wallet_balance">钱包余额（元）</string>
    <string name="recharge">充值</string>
    <string name="withdrawals">提现</string>
    <string name="city_name">郑州市</string>
    <string name="area_name">二七区</string>
    <string name="please_enter_the_name_of_the_product">请输入商品名称</string>
    <string name="please_enter_the_name_of_the_location">小区/街道/写字楼</string>
    <string name="please_enter_the_num_of_the_phone">请输入手机号码</string>
    <string name="please_enter_the_verification_code">请输入验证码</string>
    <string name="please_enter_the_password">请输入密码</string>
    <string name="setting_six_password">设置六位数以上的密码</string>
    <string name="again_edi_password">再次输入密码</string>
    <string name="please_enter_the_recommendation_code">请输入推荐码（选填）</string>
    <string name="please_enter_your_evaluation">请输入您的评价~</string>
    <string name="phone_num">手机号：</string>
    <string name="password">密码：</string>
    <string name="verification_code">验证码：</string>
    <string name="confirm_the_password">确认密码：</string>
    <string name="recommendation_code">推荐码：</string>
    <string name="click_get">点击获取</string>
    <string name="login_and_bind">登录并绑定</string>
    <string name="registered_direct_login">已注册直接登录>></string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="third_party_login">第三方登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="wx_login">微信登录</string>
    <string name="make_sure">确定</string>
    <string name="make_cancel">取消</string>
    <string name="submit">提交</string>
    <string name="ordinary_member">普通会员</string>
    <string name="integral_source">积分来源</string>
    <string name="my_integral_detail">我的积分明细</string>
    <string name="purchase_the_goods_to_get_the_integral">1.购买商品获得积分</string>
    <string name="share">分享</string>
    <string name="copy_invitation_code">复制邀请码</string>
    <string name="nickname">昵称</string>
    <string name="enter_your_nickname">输入您的昵称</string>
    <string name="not_used">未使用</string>
    <string name="already_used">已使用</string>
    <string name="failed">已失效</string>
    <string name="total">合计：</string>
    <string name="total_money">总金额：</string>
    <string name="rmb">￥</string>
    <string name="seize_a_seat">0.00</string>
    <string name="place_order">提交订单</string>
    <string name="cancel_order">取消订单</string>
    <string name="go_pay">去付款</string>
    <string name="head_portrait">头像</string>
    <string name="gender">性别</string>
    <string name="unknown">未知</string>
    <string name="select">全选</string>
    <string name="pick_up">取货</string>
    <string name="no_search_for_the_goods_you_want">没有搜索到你要的商品</string>
    <string name="now_pay">立即购买</string>
    <string name="add_cart">加入购物车</string>
    <string name="new_arrival">新品上市</string>
    <string name="more">更多>></string>
    <string name="please_choose_the_time_to_pick_up_th_goods">请选择取货时间</string>
    <string name="take_photo">拍摄</string>
    <string name="local_album">本地相册</string>
    <string name="want_good_praise">我要好评</string>
    <string name="version_update">版本更新</string>
    <string name="version_introduction">版本介绍</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="user_protocol">用户协议</string>
    <string name="clear_cache">清除缓存</string>
    <string name="sign_out">退出</string>
    <string name="agreement"><Data><![CDATA[已阅读并同意《<font color="#00ff00">溜哒兔</font>充值条款》]]></Data></string>
    <string name="register_protocol"><Data><![CDATA[已阅读并同意《<font color="#00ff00">溜哒兔</font>注册协议》]]></Data></string>
    <string name="get_reminder_notice">明天要记得去取货哦\n后天取货不保证质量\n第三天视为自动放弃</string>
    <string name="send_reminder_notice">明天要记得查收货物\n联系方式要保持畅通\n无人接收视为自动放弃</string>
</resources>
