<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_default">
    <include layout="@layout/activity_base"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:gravity="center">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_num"
            android:textSize="15sp"
            android:textColor="@color/text_color_default"/>
        <EditText
            android:id="@+id/edi_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:hint="@string/please_enter_the_num_of_the_phone"
            android:maxLength="11"
            android:inputType="phone"
            android:background="@null"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="@color/text_color_default"
            android:textColorHint="@color/edit_hint_color"
            android:textCursorDrawable="@drawable/cursor_color" />
    </LinearLayout>
    <include layout="@layout/v_horizontal_line"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/verification_code"
                        android:textSize="15sp"
                        android:textColor="@color/text_color_default"/>
                    <EditText
                        android:id="@+id/edi_verification_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:hint="@string/please_enter_the_verification_code"
                        android:inputType="phone"
                        android:background="@null"
                        android:singleLine="true"
                        android:gravity="center_vertical"
                        android:textSize="14sp"
                        android:textColor="@color/text_color_default"
                        android:textColorHint="@color/edit_hint_color"
                        android:textCursorDrawable="@drawable/cursor_color" />
                </LinearLayout>
                <Button
                    android:id="@+id/btn_verification_code"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/shape_background_text"
                    android:text="@string/click_get"
                    android:textSize="14sp"
                    android:textColor="@color/text_color_green"
                    android:layout_marginRight="16dp"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </LinearLayout>
        <include layout="@layout/v_horizontal_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
           android:paddingLeft="16dp">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="15sp"
                android:textColor="@color/text_color_default"/>
            <EditText
                android:id="@+id/edi_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:hint="@string/setting_six_password"
                android:inputType="textPassword"
                android:background="@null"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textColor="@color/text_color_default"
                android:textColorHint="@color/edit_hint_color"
                android:textCursorDrawable="@drawable/cursor_color"
                />
        </LinearLayout>
        <include layout="@layout/v_horizontal_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingLeft="16dp">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm_the_password"
                android:textSize="15sp"
                android:textColor="@color/text_color_default"/>
            <EditText
                android:id="@+id/edi_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:hint="@string/again_edi_password"
                android:inputType="textPassword"
                android:background="@null"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textColor="@color/text_color_default"
                android:textColorHint="@color/edit_hint_color"
                android:textCursorDrawable="@drawable/cursor_color"/>
        </LinearLayout>
        <include layout="@layout/v_horizontal_line"/>
        <Button
            android:id="@+id/btn_confirm_modification"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/push_button"
            android:text="@string/make_sure"
            android:gravity="center"
            android:textColor="@color/app_main_default"
            android:textSize="16sp" />

</LinearLayout>