<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_default">
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/register"
        android:textColor="@color/text_color_green"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:textSize="15sp" />
    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/icon"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_icon"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_avatar"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="42dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_num"
                    android:textSize="15sp"
                    android:textColor="@color/text_color_default"/>
                <EditText
                    android:id="@+id/et_user_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:hint="@string/please_enter_the_num_of_the_phone"
                    android:maxLength="11"
                    android:inputType="phone"
                    android:background="@null"
                    android:singleLine="true"
                    android:gravity="center_vertical"
                    android:textSize="14sp"
                    android:textColor="@color/text_color_default"
                    android:textColorHint="@color/edit_hint_color"
                    android:textCursorDrawable="@drawable/cursor_color"/>
            </LinearLayout>
            <include layout="@layout/v_horizontal_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="15sp"
                    android:textColor="@color/text_color_default"/>
                <EditText
                    android:id="@+id/et_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:hint="@string/please_enter_the_password"
                    android:maxLength="11"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:singleLine="true"
                    android:gravity="center_vertical"
                    android:textSize="14sp"
                    android:textColorHint="@color/edit_hint_color"
                    android:textColor="@color/text_color_default"
                    android:textCursorDrawable="@drawable/cursor_color"
                    />
            </LinearLayout>
            <include layout="@layout/v_horizontal_line"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/push_button"
            android:text="@string/login"
            android:gravity="center"
            android:textColor="@color/app_main_default"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/tv_forgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:layout_weight="1"
            android:layout_marginTop="12dp"
            android:text="@string/forget_password"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/text_color_default"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:layout_gravity="center">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:background="@color/divider_color"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_party_login"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/text_color_default"
            android:layout_weight="1"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:background="@color/divider_color"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:id="@+id/iv_qq_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/qq_login"
                android:textSize="12sp"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/qq"
                android:textColor="@color/text_color_default"/>
            <TextView
                android:id="@+id/iv_wx_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wx_login"
                android:textSize="12sp"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/we_chat"
                android:textColor="@color/text_color_default"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>