<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_default">
    <include layout="@layout/activity_base" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/my_invitation_code"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_my_invitation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/app_main_default"
            android:textSize="34sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_share_invitation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="13dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_share"
            android:contentDescription="@string/share_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_weight="1"
            android:gravity="center|right"
            android:text="@string/share"
            android:textColor="@color/text_color_default"
            android:textSize="13sp" />
    </LinearLayout>
    <include layout="@layout/v_horizontal_line"/>
    <LinearLayout
        android:id="@+id/linear_copy_invitation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="13dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_copy"
            android:contentDescription="@string/copy_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_weight="1"
            android:gravity="center|right"
            android:text="@string/copy_invitation_code"
            android:textColor="@color/text_color_default"
            android:textSize="13sp" />
    </LinearLayout>
    <include layout="@layout/v_horizontal_line"/>

</LinearLayout>